Fixed text errors and spacing on the headers.

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -15,7 +15,7 @@ p {
 }
 h1 {
   font-size: 5.5rem;
-  font-weight: 800;
+  font-weight: 900;
   font-style: normal;
 }
 h2 {
